pkp/pkp-lib#6062 Add DOI management

--- a/locale/el_GR/default.po
+++ b/locale/el_GR/default.po
@@ -112,9 +112,9 @@ msgstr ""
 "\t\t &lt;/ol&gt;\n"
 "\t\t &lt;h4&gt;Γ. Επιτρέποντας στους Αναγνώστες να αναζητούν αναφορές με DOI&lt;/h4&gt;\n"
 "\t\t &lt;ol&gt;\n"
-"\t\t &lt;li&gt;Όταν ακόμη η υποβολή είναι σε μορφή επεξεργάσιμου κειμένου (π.χ. αρχείο Word), αντιγράψτε τις αναφορές που θέλετε από την λίστα αναφορών του άρθρου στο CrossRef Text Query http://www.crossref.org/freeTextQuery/&lt;/li&gt;\n"
+"\t\t &lt;li&gt;Όταν ακόμη η υποβολή είναι σε μορφή επεξεργάσιμου κειμένου (π.χ. αρχείο Word), αντιγράψτε τις αναφορές που θέλετε από την λίστα αναφορών του άρθρου στο Crossref Text Query http://www.crossref.org/freeTextQuery/&lt;/li&gt;\n"
 "\t\t &lt;li&gt;Επικολλήστε κάθε DOI, από τα αποτελέσματα της αναζήτησης, στο παρακάτω URL (μεταξύ = και &amp;): http://www.cmaj.ca/cgi/external_ref?access_num=PASTE DOI#HERE&amp;link_type=DOI&lt;/li&gt;\n"
-"\t\t &lt;li&gt;Προσθέστε τη φράση CrossRef στο τέλος της αντίστοιχης αναφοράς, στη λίστα αναφορών της υποβολής.&lt;/li&gt;\n"
+"\t\t &lt;li&gt;Προσθέστε τη φράση Crossref στο τέλος της αντίστοιχης αναφοράς, στη λίστα αναφορών της υποβολής.&lt;/li&gt;\n"
 "\t\t &lt;li&gt;Μετατρέψτε αυτή τη φράση σε υπερσύνδεσμο επιλέγοντάς την και χρησιμοποιώντας το σχετικό εργαλείο του Word \"Εισαγωγή Υπερ-σύνδεσης\" και το κατάλληλο URL που ετοιμάστηκε στο #2.&lt;/li&gt;\n"
 "\t\t &lt;/ol&gt;"
 
