--- a/locale/hu_HU/default.po
+++ b/locale/hu_HU/default.po
@@ -118,9 +118,9 @@ msgstr ""
 "\t</ol>\n"
 "\t<h4>C. Engedélyezze az olvasóknak a DOI azonosító alapján történő hivatkozás keresést</h4>\n"
 "\t<ol>\n"
-"\t<li>Amikor a cikk még Word-ben van, másoljon a hivatkozások közül egy tételt a CrossRef Szöveges keresőbe http://www.crossref.org/freeTextQuery/.</li>\n"
+"\t<li>Amikor a cikk még Word-ben van, másoljon a hivatkozások közül egy tételt a Crossref Szöveges keresőbe http://www.crossref.org/freeTextQuery/.</li>\n"
 "\t<li>Illessze be kapott DOI-kat a következő URL-be (= és & között): http://www.cmaj.ca/cgi/external_ref?access_num=PASTE DOI#HERE&link_type=DOI.</li>\n"
-"\t<li>A cikk mindegyik hivatkozásának a végére illessze be a CrossRef kifejezést.</li>\n"
+"\t<li>A cikk mindegyik hivatkozásának a végére illessze be a Crossref kifejezést.</li>\n"
 "\t<li>Alakítsa hyperlinkké a kifejezést, amihez használja a Word Hyperlink beszúrása eszközt, hogy előálljon a fentebb említett #2-es számú URL.</li>\n"
 "\t</ol>"
 
