--- a/locale/pl_PL/default.po
+++ b/locale/pl_PL/default.po
@@ -160,9 +160,9 @@ msgstr ""
 "\t</ol>\n"
 "\t<h4>C. Umożliwienie czytelnikom wyszukiwania referencji z DOI</h4>\n"
 "\t<ol>\n"
-"\t<li>Gdy zgłoszenie jest jeszcze w Word, skopiuj partię odnośników do CrossRef Text Query http://www.crossref.org/freeTextQuery/.</li>\n"
+"\t<li>Gdy zgłoszenie jest jeszcze w Word, skopiuj partię odnośników do Crossref Text Query http://www.crossref.org/freeTextQuery/.</li>\n"
 "\t<li>Wklej każde polecenie DOI, które zawiera zapytanie w następującym adresie URL (pomiędzy = i &): http://www.cmaj.ca/cgi/external_ref?access_num=PASTE DOI#HERE&link_type=DOI.</li>\n"
-"\t<li>Dodaj wyrażenie CrossRef na końcu każdego cytatu w liście referencyjnej zgłoszenia.</li>\n"
+"\t<li>Dodaj wyrażenie Crossref na końcu każdego cytatu w liście referencyjnej zgłoszenia.</li>\n"
 "\t<li>Zmień tę frazę w hiperłącze, zaznaczając frazę i używając narzędzia Word Wstaw hiperłącze i odpowiedniego adresu URL przygotowanego w #2.</li>\n"
 "\t</ol>"
 
