--- a/locale/sl_SI/default.po
+++ b/locale/sl_SI/default.po
@@ -118,9 +118,9 @@ msgstr ""
 "\t</ol>\n"
 "\t<h4>C. Omogočite bralcem uporabo DOI-ja za iskanje referenc</h4>\n"
 "\t<ol>\n"
-"\t<li>Ko je prispevek še v Word obliki, skopirajte vse reference v CrossRef Text Query http://www.crossref.org/freeTextQuery/.</li>\n"
+"\t<li>Ko je prispevek še v Word obliki, skopirajte vse reference v Crossref Text Query http://www.crossref.org/freeTextQuery/.</li>\n"
 "\t<li>Skopirajte vsak DOI, ki vam ga najde Query v naslednjo povezavo (med = in &): http://www.cmaj.ca/cgi/external_ref?access_num=TUKAJ VSTAVI DOI&link_type=DOI.</li>\n"
-"\t<li>Dodajte CrossRef frazo na konec vsake v seznamu referenc prispevka.</li>\n"
+"\t<li>Dodajte Crossref frazo na konec vsake v seznamu referenc prispevka.</li>\n"
 "\t<li>Spremenite to frazo v hiperpovezavo tako, da jo označite in uporabite Wordovo fukncionalnost Vstavi hiperpovezavo in naslov literature iz točke 2.</li>\n"
 "\t</ol>"
 
