--- a/locale/tr_TR/default.po
+++ b/locale/tr_TR/default.po
@@ -162,9 +162,9 @@ msgstr ""
 "\t</ol>\n"
 "\t<h4>C. Enabling Readers to Search for References with a DOI</h4>\n"
 "\t<ol>\n"
-"\t<li>While the submission is still in Word, copy a batch of references into CrossRef Text Query http://www.crossref.org/freeTextQuery/.</li>\n"
+"\t<li>While the submission is still in Word, copy a batch of references into Crossref Text Query http://www.crossref.org/freeTextQuery/.</li>\n"
 "\t<li>Paste each DOI that the Query provides in the following URL (between = and &): http://www.cmaj.ca/cgi/external_ref?access_num=PASTE DOI#HERE&link_type=DOI.</li>\n"
-"\t<li>Add the phrase CrossRef to the end of each citation in the submission's References list.</li>\n"
+"\t<li>Add the phrase Crossref to the end of each citation in the submission's References list.</li>\n"
 "\t<li>Turn that phrase into a hyperlink by highlighting the phrase and using Word's Insert Hyperlink tool and the appropriate URL prepared in #2.</li>\n"
 "\t</ol>"
 
