--- a/plugins/pubIds/doi/locale/fr_CA/locale.po
+++ b/plugins/pubIds/doi/locale/fr_CA/locale.po
@@ -52,7 +52,7 @@ msgstr "Préfixe DOI"
 msgid "plugins.pubIds.doi.manager.settings.doiPrefix.description"
 msgstr ""
 "Le préfixe DOI est attribué par des agences (tel que <a href=\""
-"http://www.crossref.org\" target=\"_new\">CrossRef</a>) et se présente sous "
+"http://www.crossref.org\" target=\"_new\">Crossref</a>) et se présente sous "
 "la forme 10.xxxx (e.g. 10.1234) :"
 
 msgid "plugins.pubIds.doi.manager.settings.doiPrefixPattern"
