--- a/locale/en_US/api.po
+++ b/locale/en_US/api.po
@@ -14,6 +14,12 @@ msgstr ""
 msgid "api.announcements.400.contextsNotMatched"
 msgstr "The announcement you requested is not part of this journal."
 
+msgid "api.doi.400.contextsNotMatched"
+msgstr "The DOI you requested is not part of this journal."
+
+msgid "api.doi.404.doiNotFound"
+msgstr "The DOI you requested was not found."
+
 msgid "api.emails.403.disabled"
 msgstr "The email notification feature has not been enabled for this journal."
 
