--- a/locale/en_US/manager.po
+++ b/locale/en_US/manager.po
@@ -1824,14 +1824,18 @@ msgstr "The DOI Prefix is assigned by registration agencies (e.g. <a href=\"http
 msgid "doi.manager.settings.doiPrefixPattern"
 msgstr "The DOI prefix is mandatory and must be in the form 10.xxxx."
 
-msgid "doi.manager.settings.doiSuffix"
-msgstr "DOI Suffix"
-
-msgid "doi.manager.settings.doiSuffix.description"
-msgstr "A DOI suffix can take any form, but must be unique among all publishing objects with the same DOI prefix assigned:"
-
 msgid "doi.manager.settings.doiSuffixPattern"
-msgstr "Use the pattern entered below to generate DOI suffixes. Use %j for journal initials, %v for the volume number, %i for the issue number, %Y for the year, %a for the OJS article ID, %g for the OJS galley ID, %f for the OJS file ID, %p for the page number and %x for \"Custom Identifier\"."
+msgstr "Enter a custom suffix pattern for each publication type. The custom suffix pattern may use the following symbols to generate a suffix:<br><br> "
+"<code>%j</code> Journal Initials<br> "
+"<code>%v</code> Issue Volume<br> "
+"<code>%i</code> Issue Number<br> "
+"<code>%Y</code> Issue Year<br> "
+"<code>%a</code> Article ID<br> "
+"<code>%g</code> Galley ID<br> "
+"<code>%f</code> File ID<br> "
+"<code>%p</code> Page Number<br> "
+"<code>%x</code> Custom Identifier<br><br> "
+"Beware that custom suffix patterns often lead to problems generating and depositing DOIs. When using a custom suffix pattern, carefully test that editors can generate DOIs and deposit them to a registration agency like Crossref. "
 
 msgid "doi.manager.settings.doiSuffixPattern.example"
 msgstr "For example, vol%viss%ipp%p could create a DOI such as 10.1234/vol3iss2pp230"
@@ -1844,15 +1848,6 @@ msgstr "for articles"
 
 msgid "doi.manager.settings.doiSuffixPattern.representations"
 msgstr "for galleys"
-
-msgid "doi.manager.settings.doiSuffixDefault"
-msgstr "Use default patterns."
-
-msgid "doi.manager.settings.doiSuffixDefault.description"
-msgstr "%j.v%vi%i for issues<br />%j.v%vi%i.%a for articles<br />%j.v%vi%i.%a.g%g for galleys."
-
-msgid "doi.manager.settings.doiSuffixCustomIdentifier"
-msgstr "Enter an individual DOI suffix for each published item. You'll find an additional DOI input field on each item's meta-data page."
 
 msgid "doi.manager.settings.doiIssueSuffixPatternRequired"
 msgstr "Please enter the DOI suffix pattern for issues."
